src/objects/Word__c.object
<CustomObject>
    <fields>
        <fullName>ProposedBy__c</fullName>
        <label>Proposed By</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>hasExtraGravity__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Gravity</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>isActive__c</fullName>
        <defaultValue>false</defaultValue>
        <label>active</label>
        <type>Checkbox</type>
    </fields>
    <label>Word</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>Alle</label>
    </listViews>
    <nameField>
        <label>Wort</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Words</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>